# NanoLoop-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.frontend  LICENSES.md  Makefile  README.md  alembic.ini  docker-compose.ollama.yml  docker-compose.yml  docker-models-cpu-constraints.txt  pyproject.toml
.github/: pull_request_template.md
app/: __init__.py  authentication.py  main.py
demo_data/: README.md  smoke_fixture.example.json  smoke_fixture.schema.json
docs/: DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  LOCAL_LLM_CHAT_GUIDE.md  MVP_BACKEND_HANDOFF.md  NanoLoop_Agent_RAG与检索功能开发指南_v1.0.docx  NanoLoop_Agent_协同开发规格与接口总文档_v3.0.docx  NanoLoop_Agent_协同开发规格与接口总文档_v3.0.md  NanoLoop_Agent_协同开发规格与接口总文档_v4.0.docx  NanoLoop_Agent_协同开发规格与接口总文档_v4.0.md  PRODUCTION_READINESS.md  RAG_RETRIEVAL_DEVELOPMENT_GUIDE.md  README.md  USER_ACCEPTANCE_GUIDE.md  acceptance-report-2026-07-23.md  agglomerated-a-cloud-validation.md  local-llm-chat-implementation-report.md  model-assets-agglomerated-a-acceptance-2026-07-24.md  model-assets-large-a-b-acceptance-2026-07-23.md  model-assets-small-a-acceptance-2026-07-23.md  model-rag-handoff.md  requirements-traceability.md  small-a-cloud-validation.md  unet-ab-handoff.md
frontend/: .gitignore  Dockerfile  README.md  __init__.py  a11y.py  api_client.py  app.py  components.py  eslint.config.mjs  feedback.py  model_catalog.py  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  result_layers.py  roi_canvas.py  state.py  styles.py  vitest.config.ts
model_artifacts/: registry.yaml
rag-acceptance-v1/: README.md  asset-ledger.json
scripts/: __init__.py  backup_restore.py  build_rag_guide_doc.py  build_v3_handoff_doc.py  build_v4_handoff_doc.py  check_frontend.py  check_local_llm.py  check_migrations.sh  degraded_stub_server.py  docker-entrypoint.sh  embedding_snapshot_fingerprint.py  evaluate_demo_knowledge.py  generate_acceptance_fixture.py  generate_openapi.py  ingest_demo_knowledge.py  manage_file_token_keyring.py  manage_identity.py  (+11 more)
(+425 files in other folders)
