[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nanoloop-agent"
version = "0.1.0"
description = "Traceable SEM nanoparticle analysis, knowledge retrieval, and decision-support agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - competition development; see LICENSES.md" }
authors = [{ name = "NanoLoop Agent Team" }]
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=2.0,<2.4",
  "pillow>=11,<13",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6,<7",
  "scikit-image>=0.25,<1",
  "scipy>=1.15,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.10,<4",
  "pandas>=2.2,<3",
]
rag = [
  "faiss-cpu>=1.10,<2",
  "pymupdf>=1.25,<2",
  "sentence-transformers>=4,<6",
]
models = [
  "torch>=2.13,<3",
  "torchvision>=0.28,<1",
  "ultralytics>=8.3,<9",
]
docs = ["python-docx>=1.2,<2"]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: tests that exercise multiple application layers",
  "slow: tests that require heavyweight models or corpora",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008", "RUF001"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
exclude = ["app/db/migrations/versions"]

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*", "skimage", "skimage.*", "tifffile", "tifffile.*"]
follow_imports = "skip"
ignore_missing_imports = true
